Platform independent changes are marked with '***', otherwise the
applicable platform is listed. If someone besides me found the bug or
suggested the fix, I'll put their name in [ ].

KallistiOS version 1.3.0 -----------------------------------------------
- DC  Broadband Adapter driver fixes [Dan Potter == DP]
- *** Imported a new version of lwIP, with proper sockets lib [DP]

KallistiOS version 1.2.1 -----------------------------------------------
- DC  Added genmenu module and example in Tsunami [Dan Potter == DP]
- DC  Added hello-mp3 example [DP]
- DC  320x240 PAL mode [mekanaizer == MK]
- *** Fixed vqenc and kmgenc headers to be ANSI compliant [DP]
- *** New addons/ports build system [DP]
- *** Moved most addons/ports into their own tree/distribution [DP]
- *** Moved several incorrectly placed pieces into libkosutils [DP]

KallistiOS version 1.2.0 -----------------------------------------------
- DC  Fix to use DCARM7_CFLAGS when compiling ARM driver [Christian Groessler == CG]
- DC  Fix for typo in vmu_pkg_crc() (submitted by anonymous)
- DC  Fix for incorrect source address in maple packets [Jim Ursetto == JU]
- *** Fix fputs() to not put an extra "\n" [Walter van Niftrik == WvN]
- DC  Fix Makefile for vqenc to work in more cases [Dan Potter == DP]
- DC  Integrated irq_disable() and irq_enable_exc() so that exceptions are
      always enabled. [DP]
- DC  Added pvr_mem_stats() (like malloc_stats but for PVR) [DP]
- *** Removed SYSCALL() usage in favor of thd_block_now() [DP]
- *** Primary timers switched to wakeup interval rather than periodic. [DP]
- *** Fix uninitialized mutex in semaphores [DP]
- *** Added generic waits, and changed semaphores/mutexes to use them [DP]
- DC  Added timer_ms_gettime64() [DP]
- DC  Fix for potential incorrectness in NDEBUG mode in pvr_txr_load_ex [DP]
- DC  Remove float usage in timer_ms_gettime() [DP]
- *** More proper condvar impl using genwaits [DP]