@@ -5,6 +5,8 @@ suggested the fix, I'll put their name in [ ].
 KallistiOS version 1.3.0 -----------------------------------------------
 - DC  Broadband Adapter driver fixes [Dan Potter == DP]
 - *** Imported a new version of lwIP, with proper sockets lib [DP]
+- DC  Added new DC example for Parallax (raster_melt) [DP]
+- *** Added svnpush.py script for pushing repositories on the web [DP]
 
 KallistiOS version 1.2.1 -----------------------------------------------
 - DC  Added genmenu module and example in Tsunami [Dan Potter == DP]
